--- a/mission2.css
+++ b/mission2.css
@@ -10,15 +10,18 @@
   box-sizing: border-box;
   font-family: "poppins";
 }
+
 body {
   background-color: lightgreen;
 }
+
 /*HEADER STYLE*/
 .container {
   max-width: 1340px;
   margin: auto;
   padding: 0px 75px;
 }
+
 /*NAV BAR*/
 .navbar {
   display: flex;
@@ -26,38 +29,46 @@ body {
   align-items: center;
   padding: 20px 0;
 }
+
 .navbar .logo {
   font-size: 23px;
   font-weight: 700;
   color: white;
 }
+
 .navbar .rightnav {
   flex: 1;
   text-align: right;
 }
+
 /*LIST STYLE: NONE - REMOVED BULLETS AND PUT NAV BAR ON RIGHT*/
 nav ul {
   display: inline-block;
   list-style: none;
 }
+
 nav ul li {
   display: inline-block;
   margin-right: 20px;
   /*This position is important to make the hover animation work*/
   position: relative;
 }
+
 nav ul li a {
   text-decoration: none;
   color: white;
 }
+
 /*HOVER ANIMATIONS*/
 nav ul li a:hover {
   color: darkgreen;
 }
+
 .navbar ul li:hover::after {
   width: 100%;
   left: 0;
 }
+
 nav ul li::after {
   content: ""; /*creates the line*/
   pointer-events: none; /*so line remains clickable*/
@@ -71,6 +82,7 @@ nav ul li::after {
   transition-duration: 400ms;
   transition-property: width, left;
 }
+
 /*MEDIA QUERIES*/
 @media screen and (max-width: 768px) {
   nav {
@@ -81,6 +93,14 @@ nav ul li::after {
 /* SUPERHERO SECTION*/
 
 .superhero {
+  width: 100%;
+  max-width: 820px;
+  background-color: lightgreen;
+  border-radius: 10px;
+  box-shadow: 0 0 20px 1px rgba(0, 0, 0, 0.1);
+  z-index: 1000;
+  overflow: hidden;
+  position: relative;
   display: flexbox;
   margin: 20px;
   align-items: left;
@@ -88,6 +108,7 @@ nav ul li::after {
   justify-content: space-between;
   padding-bottom: 40px;
 }
+
 .content {
   display: flex;
   align-items: left;
@@ -95,6 +116,7 @@ nav ul li::after {
   height: 850px;
   position: relative;
 }
+
 .superhero-main {
   display: flex;
   align-items: center;
@@ -102,17 +124,20 @@ nav ul li::after {
   justify-content: center;
   position: relative;
 }
+
 .superhero-text {
   display: flex;
   flex-direction: column;
   max-width: 800px;
   position: relative;
 }
+
 .superhero-text h2 {
   font-size: 23px;
   font-weight: 600;
   color: darkgreen;
 }
+
 .superhero-text h1 {
   font-size: 45px;
   font-weight: 700;
@@ -121,6 +146,7 @@ nav ul li::after {
   margin: 24px;
   flex-direction: column;
 }
+
 .superhero-text p {
   font-size: 16px;
   font-weight: 500;
@@ -128,11 +154,17 @@ nav ul li::after {
   line-height: 1.3;
   font-family: "DM Sans";
 }
+
 .superhero-image img {
-  margin-top: 20px;
+  margin-top: auto;
   width: 370px;
   height: 370px;
   border: 3px solid white;
+  filter: grayscale(100%);
+}
+
+.superhero-image img:hover {
+  filter: grayscale(0%);
 }
 /* If the screen size is 601px wide or more, set the font-size of <div> to 80px */
 @media screen and (min-width: 601px) {
@@ -152,4 +184,379 @@ footer {
   padding: 16px;
   color: #fff;
   text-align: center;
+}
+/*==FLASHLIGHT EFFECT==*/
+
+#spotlight {
+  position: fixed;
+  opacity: 1;
+  width: 100vw;
+  height: 100vh;
+  top: 0;
+  left: 0;
+  pointer-events: none;
+}
+
+/*==FORM SECTION==*/
+
+.form {
+  width: 100%;
+  max-width: 820px;
+  background-color: #fff;
+  border-radius: 10px;
+  box-shadow: 0 0 20px 1px rgba(0, 0, 0, 0.1);
+  z-index: 1000;
+  overflow: hidden;
+  position: relative;
+}
+
+.contact-form {
+  background-color: lightgreen;
+  position: relative;
+}
+
+.contact-form:before {
+  content: "";
+  position: absolute;
+  width: 26px;
+  height: 26px;
+  background-color: #1abc9c;
+  transform: rotate(45deg);
+  top: 50px;
+  left: -13px;
+}
+
+form {
+  padding: 2.3rem 2.2rem;
+  z-index: 10;
+  overflow: hidden;
+  position: relative;
+}
+
+.title {
+  color: #fff;
+  font-weight: 500;
+  font-size: 1.5rem;
+  line-height: 1;
+  margin-bottom: 0.7rem;
+}
+
+.input-container {
+  position: relative;
+  margin: 1rem 0;
+}
+
+.input {
+  width: 100%;
+  outline: none;
+  border: 2px solid #fafafa;
+  background: none;
+  padding: 0.6rem 1.2rem;
+  color: #fff;
+  font-weight: 500;
+  font-size: 0.95rem;
+  letter-spacing: 0.5px;
+  border-radius: 25px;
+  transition: 0.3s;
+}
+
+textarea.input {
+  padding: 0.8rem 1.2rem;
+  min-height: 150px;
+  border-radius: 22px;
+  resize: none;
+  overflow-y: auto;
+}
+
+.input-container label {
+  position: absolute;
+  top: 50%;
+  left: 15px;
+  transform: translateY(-50%);
+  padding: 0 0.4rem;
+  color: #fafafa;
+  font-size: 0.9rem;
+  font-weight: 400;
+  pointer-events: none;
+  z-index: 1000;
+  transition: 0.5s;
+}
+
+.input-container.textarea label {
+  top: 1rem;
+  transform: translateY(0);
+}
+
+.btn {
+  padding: 0.6rem 1.3rem;
+  background-color: #fff;
+  border: 2px solid #fafafa;
+  font-size: 0.95rem;
+  color: lightgreen;
+  line-height: 1;
+  border-radius: 25px;
+  outline: none;
+  cursor: pointer;
+  transition: 0.3s;
+  margin: 0;
+}
+
+.btn:hover {
+  background-color: transparent;
+  color: #fff;
+}
+
+.input-container span {
+  position: absolute;
+  top: 0;
+  left: 25px;
+  transform: translateY(-50%);
+  font-size: 0.8rem;
+  padding: 0 0.4rem;
+  color: transparent;
+  pointer-events: none;
+  z-index: 500;
+}
+
+.input-container span:before,
+.input-container span:after {
+  content: "";
+  position: absolute;
+  width: 10%;
+  opacity: 0;
+  transition: 0.3s;
+  height: 5px;
+  background-color: #1abc9c;
+  top: 50%;
+  transform: translateY(-50%);
+}
+
+.input-container span:before {
+  left: 50%;
+}
+
+.input-container span:after {
+  right: 50%;
+}
+
+.input-container.focus label {
+  top: 0;
+  transform: translateY(-50%);
+  left: 25px;
+  font-size: 0.8rem;
+}
+
+.input-container.focus span:before,
+.input-container.focus span:after {
+  width: 50%;
+  opacity: 1;
+}
+
+.contact-info {
+  padding: 2.3rem 2.2rem;
+  position: relative;
+}
+
+.contact-info .title {
+  color: #1abc9c;
+}
+
+.text {
+  color: #333;
+  margin: 1.5rem 0 2rem 0;
+}
+
+.information {
+  display: flex;
+  color: #555;
+  margin: 0.7rem 0;
+  align-items: center;
+  font-size: 0.95rem;
+}
+
+.icon {
+  width: 28px;
+  margin-right: 0.7rem;
+}
+
+.social-media {
+  padding: 2rem 0 0 0;
+}
+
+.social-media p {
+  color: #333;
+}
+
+.social-icons {
+  display: flex;
+  margin-top: 0.5rem;
+}
+
+.social-icons a {
+  width: 35px;
+  height: 35px;
+  border-radius: 5px;
+  background: linear-gradient(45deg, #1abc9c, #149279);
+  color: #fff;
+  text-align: center;
+  line-height: 35px;
+  margin-right: 0.5rem;
+  transition: 0.3s;
+}
+
+.social-icons a:hover {
+  transform: scale(1.05);
+}
+
+.contact-info:before {
+  content: "";
+  position: absolute;
+  width: 110px;
+  height: 100px;
+  border: 22px solid #1abc9c;
+  border-radius: 50%;
+  bottom: -77px;
+  right: 50px;
+  opacity: 0.3;
+}
+
+.big-circle {
+  position: absolute;
+  width: 500px;
+  height: 500px;
+  border-radius: 50%;
+  background: linear-gradient(to bottom, #1cd4af, #159b80);
+  bottom: 50%;
+  right: 50%;
+  transform: translate(-40%, 38%);
+}
+
+.big-circle:after {
+  content: "";
+  position: absolute;
+  width: 360px;
+  height: 360px;
+  background-color: #fafafa;
+  border-radius: 50%;
+  top: calc(50% - 180px);
+  left: calc(50% - 180px);
+}
+
+.square {
+  position: absolute;
+  height: 400px;
+  top: 50%;
+  left: 50%;
+  transform: translate(181%, 11%);
+  opacity: 0.2;
+}
+
+@media (max-width: 850px) {
+  .form {
+    grid-template-columns: 1fr;
+  }
+
+  .contact-info:before {
+    bottom: initial;
+    top: -75px;
+    right: 65px;
+    transform: scale(0.95);
+  }
+
+  .contact-form:before {
+    top: -13px;
+    left: initial;
+    right: 70px;
+  }
+
+  .square {
+    transform: translate(140%, 43%);
+    height: 350px;
+  }
+
+  .big-circle {
+    bottom: 75%;
+    transform: scale(0.9) translate(-40%, 30%);
+    right: 50%;
+  }
+
+  .text {
+    margin: 1rem 0 1.5rem 0;
+  }
+
+  .social-media {
+    padding: 1.5rem 0 0 0;
+  }
+}
+
+@media (max-width: 480px) {
+  .container {
+    padding: 1.5rem;
+  }
+
+  .contact-info:before {
+    display: none;
+  }
+
+  .square,
+  .big-circle {
+    display: none;
+  }
+
+  form,
+  .contact-info {
+    padding: 1.7rem 1.6rem;
+  }
+
+  .text,
+  .information,
+  .social-media p {
+    font-size: 0.8rem;
+  }
+
+  .title {
+    font-size: 1.15rem;
+  }
+
+  .social-icons a {
+    width: 30px;
+    height: 30px;
+    line-height: 30px;
+  }
+
+  .icon {
+    width: 23px;
+  }
+
+  .input {
+    padding: 0.45rem 1.2rem;
+  }
+
+  .btn {
+    padding: 0.45rem 1.2rem;
+  }
+}
+
+/*==PASSWORD SECTION==*/
+
+.pin-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  height: 100vh;
+}
+
+#pinInput {
+  padding: 10px;
+  font-size: 16px;
+  margin-bottom: 10px;
+}
+
+button {
+  background-color: #0074d9;
+  color: #fff;
+  border: none;
+  padding: 10px 20px;
+  cursor: pointer;
 }
